--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,15 @@
+certifi==2023.7.22
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==4.0.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-Werkzeug==1.0.1
 oauthlib==3.2.0
+python-dotenv==0.19.2
 requests==2.25.1
 requests-oauthlib==1.3.1
-python-dotenv==0.19.2
+urllib3==1.26.18
+Werkzeug==1.0.1
