add flask-app and flask-debug into docker-compose env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     container_name: flask
     build: ./backend/
     env_file: ./.env
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=1
     networks:
       - client-side
       - server-side
@@ -19,28 +22,6 @@ services:
       - 4000:4000
     volumes:
       - .:/code
-  # db:
-  #   image: postgres:15.4-alpine
-  #   environment:
-  #     - POSTGRES_USER=root
-  #     - POSTGRES_PASSWORD=testpwd
-  #     - POSTGRES_DB=transcendence
-  #   networks:
-  #     - server-side
-  #   ports:
-  #     - 5432:5432
-  #   volumes:
-  #     - db-data:/var/lib/postgresql/data
-  # pgadmin:
-  #   container_name: pgadmin
-  #   image: dpage/pgadmin4
-  #   environment:
-  #     - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-  #     - PGADMIN_DEFAULT_PASSWORD=root
-  #   ports:
-  #     - 5050:80
-  #   networks:
-  #     - server-side
 
 networks:
   client-side: {}
